2023-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-file-name-all-completions): New defmacro.
	(tramp-completion-handle-file-name-all-completions):
	* tramp-adb.el (tramp-adb-handle-file-name-all-completions):
	* tramp-crypt.el (tramp-crypt-handle-file-name-all-completions):
	* tramp-fuse.el (tramp-fuse-handle-file-name-all-completions):
	* tramp-gvfs.el (tramp-gvfs-handle-file-name-all-completions):
	* tramp-sh.el (tramp-sh-handle-file-name-all-completions):
	* tramp-smb.el (tramp-smb-handle-file-name-all-completions):
	* tramp-sudoedit.el (tramp-sudoedit-handle-file-name-all-completions):
	Use it.

2023-10-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp-sh.el: Require `cl-lib` rather than `cl-seq`.

2023-10-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-read-id-output): Identifiers can contain "-".

2023-10-19  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 29.2.

2023-10-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-revert-buffer-with-sudo):
	Use `buffer-file-name' instead of `buffer-name'.  (Bug#66571)

2023-10-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-expand-file-name):
	* tramp-gvfs.el (tramp-gvfs-handle-expand-file-name):
	* tramp-sh.el (tramp-sh-handle-expand-file-name):
	* tramp-smb.el (tramp-smb-handle-expand-file-name):
	* tramp-sudoedit.el (tramp-sudoedit-handle-expand-file-name):
	Handle quoted tilde.  (Bug#65685)

2023-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-handle-file-notify-add-watch):
	Handle `unmounted'.

	* tramp-sh.el (tramp-sh-handle-file-notify-add-watch):
	Handle `unmount' and `unmounted'.

2023-10-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (ls-lisp-dirs-first, ls-lisp-emulation)
	(ls-lisp-ignore-case, ls-lisp-verbosity): Declare.